[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/HUD/hud_keyYellow_disabled.png" type="Texture" id=1]
[ext_resource path="res://assets/HUD/hud_0.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/hud_coins.png" type="Texture" id=3]
[ext_resource path="res://src/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/Brightly Crush Shine.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Items/battery-2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="FPS" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.84354
margin_top = -57.046
margin_right = 982.844
margin_bottom = -43.046
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FPS: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 167.0
custom_constants/margin_top = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 167.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 47.0
custom_constants/separation = 850
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 87.0
margin_bottom = 47.0
custom_constants/separation = 10

[node name="Coin" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 47.0
margin_bottom = 47.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinCount" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 87.0
margin_bottom = 47.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Key" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 937.0
margin_right = 981.0
margin_bottom = 47.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 1004.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battery" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 53.4
margin_bottom = 28.8
rect_min_size = Vector2( 53.4, 28.8 )
texture = ExtResource( 6 )
expand = true

[node name="BatteryProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 57.0
margin_right = 110.8
margin_bottom = 28.8
rect_min_size = Vector2( 53.8, 28.8 )

[node name="PauseMenu" type="CenterContainer" parent="."]
pause_mode = 2
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -275.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
margin_left = 312.0
margin_right = 712.0
margin_bottom = 550.0
rect_min_size = Vector2( 400, 550 )
color = Color( 0.282353, 0.419608, 0.588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
margin_left = 401.0
margin_top = 187.0
margin_right = 623.0
margin_bottom = 363.0
custom_constants/margin_top = -70

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
margin_top = -70.0
margin_right = 222.0
margin_bottom = 176.0
custom_constants/separation = 30

[node name="Paused" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_right = 222.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="Continue" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 222.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 222.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
